# Tensor-AI

./: .env.example  .gitignore  README.md  dashboard_mockup.html  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: executor.py  orchestrator.py  planner.py  retriever.py  tools.py  validator.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  connectors.py  dashboard.py  graph.py  health.py  ingest.py  query.py
backend/app/connectors/: __init__.py  base.py  gmail_connector.py  pdf_connector.py  registry.py  slack_connector.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/memory/: __init__.py  entity_extractor.py  graph_memory.py  hybrid_retriever.py  vector_store.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/models/domain/: graph.py
backend/app/models/schemas/: auth.py  ingest.py  query.py
backend/app/services/: chunker.py  embedder.py  ingestion.py  lifecycle.py  llm.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_agents.py  test_chunker.py  test_health.py
docs/: CONTRIBUTING.md  api.md  architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.css  LoadingSpinner.tsx
frontend/src/components/graph/: index.ts  (+2 more)
frontend/src/config/: index.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.css  Dashboard.tsx  GraphExplorer.css  GraphExplorer.tsx  IngestionPage.css  IngestionPage.tsx  LoginPage.css  LoginPage.tsx  QueryPage.css  QueryPage.tsx  SettingsPage.css  SettingsPage.tsx
frontend/src/services/: api.ts  socket.ts
frontend/src/stores/: authStore.ts  dashboardStore.ts  graphStore.ts  queryStore.ts  settingsStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
(+23 files in other folders)
